# market-data-collector

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: prometheus.yml
src/market_data_collector/: __init__.py  __main__.py  collector.py  config.py  kafka_producer.py  logging_config.py  metrics.py  models.py
src/market_data_collector/exchanges/: __init__.py  base.py  binance.py  coinbase.py  kraken.py
tests/: test_backpressure.py  test_parsers.py
