[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "market-data-collector"
version = "0.1.0"
description = "Async crypto market data collector: WebSocket -> Kafka, with reconnection/backoff and strict typing."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alessandro Gagliardi" }]
requires-python = ">=3.11"
keywords = ["crypto", "market-data", "kafka", "asyncio", "websockets", "binance", "coinbase"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Framework :: AsyncIO",
  "Topic :: Office/Business :: Financial",
]

dependencies = [
  "websockets>=12.0",
  "aiokafka>=0.10.0",
  "orjson>=3.10.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "structlog>=24.1.0",
  "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "mypy>=1.9.0",
  "ruff>=0.4.0",
]

[project.scripts]
market-data-collector = "market_data_collector.__main__:main"

[project.urls]
Repository = "https://github.com/Pazificateur69/market-data-collector"

[tool.hatch.build.targets.wheel]
packages = ["src/market_data_collector"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["aiokafka.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
